--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Github WusThanhDieu</title>
+    <title>Egamorft</title>
     <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet"/>
     <link rel="stylesheet" href="/static/css/app.css" />
   </head>
@@ -15,7 +15,7 @@
         "component": "views/home",
         "props": {
           "errors": {},
-          "name": "Github WusThanhDieu",
+          "name": "Egamorft",
           "quote": {
             "message": "",
             "author": ""
@@ -64,11 +64,11 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Text 1",
-              "Text 2",
-              "Text 3"
+              "1/6 vui vẻ nha cả nhà",
+              "Con chó inter",
+              "PSG vô địch 🏆🏆"
             ],
-            "music": "//thanhdieu.com/music.mp3"
+            "music": "/music.mp3"
           },
           "clientId": "/"
         },
