--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               "Con chó inter",
               "PSG vô địch 🏆🏆"
             ],
-            "music": "/music.mp3"
+            "music": "music.mp3"
           },
           "clientId": "/"
         },
